--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
         <hr>
     </header>
   <div id="content">
-    <%= @post.content %>
+    <%= markdown @post.content %>
   </div>
 
   <hr>
@@ -23,6 +23,8 @@
   <hr>
 
   </div>
+  <%= link_to "Edit", edit_post_path(@post) %>
+
 </div>
 
 <br>
