Add friendly_id gem & setup friendly_is on posts

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
         <hr>
         <p>I'm a aspiring full stack app developer and a jack-of-all-trades of all things digital. Living in the  north of The Netherlands.</p>
         <p>For a living i'm working on the technical department of Arriva Netherlands at the back-office. For fun i'm studying app development to someday develop meaningful applications professionally.</p>
-        <p>You can find me on <a href="#">Twitter</a> sharing stuff i find interesting</p>
+        <p>You can find me on <a href="#">Twittter</a> sharing stuff i find interesting</p>
     </div>
     <div class="col-2 homepage_content">
         <h2>Stuff i've written</h2>
