--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
         <%= link_to "Hillie Kootstra", root_path, class: "name" %></a>
         <nav>
             <%= link_to "Articles", posts_path %>
-            <a href="#">Projects</a>
+            <%= link_to "Projects", projects_path %>
             <a href="#">Contact</a>
         </nav>
     </header>
