--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,11 +18,9 @@
     <div class="col-3 homepage_content">
         <h2>Stuff i've built</h2>
         <hr>
-        <h3><a href="#">Project numero uno</a></h3>
-        <p class="date">Friday April 10th</p>
-        <h3><a href="#">App number two</a></h3>
-        <p class="date">Friday April 10th</p>
-        <h3><a href="#">Website nummer drie</a></h3>
-        <p class="date">Friday April 10th</p>
+        <% @projects.each do |project| %>
+          <h3><a href="#"><%= link_to project.title, project %></a></h3>
+          <p class="date"><%= project.created_at.strftime("%A, %b, %d") %></p>
+        <% end %>
     </div>
 </div>
